[1114]  [Detachement] Enhance detachment menu apparition - Fix dependency to resources Bug: 1114 Change-Id: I73ec74ed6c4d2258bea76cb91e115044f4267aa1 Signed-off-by: Faycal Abka <faycal.abka@altran.com>