@@ -366,7 +366,7 @@ This file was generated by Eclipse EGF
         </echoproperties>
     </target>
 	
-	<target name="all" depends="CleanStep_1,TP_mars,TP_build,releng,copy_egf_to_tools_folder,common,PublishStep_7,common_feature,BuildStep_9,PublishStep_10,accuracy_feature,resourcereuse,PublishStep_13,PublishStep_14,PublishStep_15,PublishStep_16,resourcereuse_feature,BuildStep_18,PublishStep_19,cadence_feature,report,PublishStep_22,PublishStep_23,report_feature,emde,PublishStep_26,PublishStep_27,PublishStep_28,emde_feature,contextual_explorer,PublishStep_31,contextual_explorer_emde_feature,patterns,PublishStep_34,patterns_feature,diagrams,PublishStep_37,diagrams_representation_feature,docgen,PublishStep_40,PublishStep_41,docgen_features,BuildStep_43,PublishStep_44,composer_feature,BuildStep_46,PublishStep_47,transposer_feature,detachment,PublishStep_50,PublishStep_51,PublishStep_52,PublishStep_53,PublishStep_54,PublishStep_55,common_1_feature,detachment_and_attachment_menu_feature,detachment_feature,attachment_feature,ad,PublishStep_61,PublishStep_62,ad_feature,detachment_contrib,PublishStep_65,contrib_feature,ad_dsl,PublishStep_68,PublishStep_69,addsl_feature,examples,PublishStep_72,PublishStep_73,PublishStep_74,PublishStep_75,BuildStep_76,BuildStep_77,PublishStep_78,PublishStep_79,BuildStep_80,BuildStep_81,PublishStep_82,BuildStep_83,BuildStep_84,PublishStep_85,BuildStep_86,PublishStep_87,PublishStep_88,PublishStep_89,AntStep_90,kitalpha,AntStep_92" />
+	<target name="all" depends="CleanStep_1,TP_mars,TP_build,releng,copy_egf_to_tools_folder,common,PublishStep_7,common_feature,BuildStep_9,PublishStep_10,accuracy_feature,resourcereuse,PublishStep_13,PublishStep_14,PublishStep_15,PublishStep_16,resourcereuse_feature,BuildStep_18,PublishStep_19,cadence_feature,report,PublishStep_22,PublishStep_23,report_feature,emde,PublishStep_26,PublishStep_27,PublishStep_28,emde_feature,contextual_explorer,PublishStep_31,contextual_explorer_emde_feature,patterns,PublishStep_34,patterns_feature,diagrams,PublishStep_37,diagrams_representation_feature,docgen,PublishStep_40,PublishStep_41,docgen_features,BuildStep_43,PublishStep_44,composer_feature,BuildStep_46,PublishStep_47,transposer_feature,detachment,PublishStep_50,PublishStep_51,PublishStep_52,PublishStep_53,PublishStep_54,PublishStep_55,common_1_feature,detachment_feature,attachment_feature,ad,PublishStep_60,PublishStep_61,ad_feature,detachment_contrib,PublishStep_64,contrib_feature,ad_dsl,PublishStep_67,PublishStep_68,addsl_feature,examples,PublishStep_71,PublishStep_72,PublishStep_73,PublishStep_74,BuildStep_75,BuildStep_76,PublishStep_77,PublishStep_78,BuildStep_79,BuildStep_80,PublishStep_81,BuildStep_82,BuildStep_83,PublishStep_84,BuildStep_85,PublishStep_86,PublishStep_87,PublishStep_88,AntStep_89,kitalpha,AntStep_91" />
 	<target name="TP_mars" depends="TP_mars_setup_platform" />
 	<target name="TP_mars_setup_platform" depends="TP_mars_setup_platform_TP_mars,TP_mars_setup_platform_install_cots_features,TP_mars_setup_platform_install_sirius_features,TP_mars_setup_platform_install_diffmerge,TP_mars_setup_platform_install_amalgam_features,TP_mars_setup_platform_install_ecoretools2" />
 	<target name="TP_build" depends="TP_build_install_egf_TP_build" />
@@ -1040,6 +1040,43 @@ This file was generated by Eclipse EGF
 		</buckminster>
     </target>
 
+    <target name="BuildStep_75" depends="init,install.buckminster">
+        <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
+
+		<echo message="install JRE ${env.JAVA_HOME}" />
+    	<buckminster command="installJRE">
+            <cmdargs>
+                <arg value="--location" />
+                <arg value="${env.JAVA_HOME}" />
+            </cmdargs>
+        </buckminster>
+
+
+		<echo message="import target platform" />
+        <buckminster command="importtargetdefinition">
+            <cmdargs>
+                <arg value="--active" />
+                <arg value="${relengDir}/buckminster_BuildStep_75/build.target" />
+            </cmdargs>
+        </buckminster>
+		<echo message="provision : import projects in workspace" />
+        <buckminster command="import">
+            <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
+            <cmdargs>
+                <arg value="${relengDir}/buckminster_BuildStep_75/build.mspec" />
+            </cmdargs>
+        </buckminster>
+
+
+        <echo message="Invoking all eclipse builders on workspace ${workspace}" />
+        <buckminster command="build" >
+            <cmdargs>
+                <arg value="--clean" />
+                <arg value="--thorough" />
+            </cmdargs>
+		</buckminster>
+    </target>
+
     <target name="BuildStep_76" depends="init,install.buckminster">
         <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
 
@@ -1077,7 +1114,7 @@ This file was generated by Eclipse EGF
 		</buckminster>
     </target>
 
-    <target name="BuildStep_77" depends="init,install.buckminster">
+    <target name="BuildStep_79" depends="init,install.buckminster">
         <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
 
 		<echo message="install JRE ${env.JAVA_HOME}" />
@@ -1093,14 +1130,14 @@ This file was generated by Eclipse EGF
         <buckminster command="importtargetdefinition">
             <cmdargs>
                 <arg value="--active" />
-                <arg value="${relengDir}/buckminster_BuildStep_77/build.target" />
+                <arg value="${relengDir}/buckminster_BuildStep_79/build.target" />
             </cmdargs>
         </buckminster>
 		<echo message="provision : import projects in workspace" />
         <buckminster command="import">
             <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
             <cmdargs>
-                <arg value="${relengDir}/buckminster_BuildStep_77/build.mspec" />
+                <arg value="${relengDir}/buckminster_BuildStep_79/build.mspec" />
             </cmdargs>
         </buckminster>
 
@@ -1151,7 +1188,7 @@ This file was generated by Eclipse EGF
 		</buckminster>
     </target>
 
-    <target name="BuildStep_81" depends="init,install.buckminster">
+    <target name="BuildStep_82" depends="init,install.buckminster">
         <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
 
 		<echo message="install JRE ${env.JAVA_HOME}" />
@@ -1167,14 +1204,14 @@ This file was generated by Eclipse EGF
         <buckminster command="importtargetdefinition">
             <cmdargs>
                 <arg value="--active" />
-                <arg value="${relengDir}/buckminster_BuildStep_81/build.target" />
+                <arg value="${relengDir}/buckminster_BuildStep_82/build.target" />
             </cmdargs>
         </buckminster>
 		<echo message="provision : import projects in workspace" />
         <buckminster command="import">
             <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
             <cmdargs>
-                <arg value="${relengDir}/buckminster_BuildStep_81/build.mspec" />
+                <arg value="${relengDir}/buckminster_BuildStep_82/build.mspec" />
             </cmdargs>
         </buckminster>
 
@@ -1225,7 +1262,7 @@ This file was generated by Eclipse EGF
 		</buckminster>
     </target>
 
-    <target name="BuildStep_84" depends="init,install.buckminster">
+    <target name="BuildStep_85" depends="init,install.buckminster">
         <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
 
 		<echo message="install JRE ${env.JAVA_HOME}" />
@@ -1241,51 +1278,14 @@ This file was generated by Eclipse EGF
         <buckminster command="importtargetdefinition">
             <cmdargs>
                 <arg value="--active" />
-                <arg value="${relengDir}/buckminster_BuildStep_84/build.target" />
+                <arg value="${relengDir}/buckminster_BuildStep_85/build.target" />
             </cmdargs>
         </buckminster>
 		<echo message="provision : import projects in workspace" />
         <buckminster command="import">
             <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
             <cmdargs>
-                <arg value="${relengDir}/buckminster_BuildStep_84/build.mspec" />
-            </cmdargs>
-        </buckminster>
-
-
-        <echo message="Invoking all eclipse builders on workspace ${workspace}" />
-        <buckminster command="build" >
-            <cmdargs>
-                <arg value="--clean" />
-                <arg value="--thorough" />
-            </cmdargs>
-		</buckminster>
-    </target>
-
-    <target name="BuildStep_86" depends="init,install.buckminster">
-        <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
-
-		<echo message="install JRE ${env.JAVA_HOME}" />
-    	<buckminster command="installJRE">
-            <cmdargs>
-                <arg value="--location" />
-                <arg value="${env.JAVA_HOME}" />
-            </cmdargs>
-        </buckminster>
-
-
-		<echo message="import target platform" />
-        <buckminster command="importtargetdefinition">
-            <cmdargs>
-                <arg value="--active" />
-                <arg value="${relengDir}/buckminster_BuildStep_86/build.target" />
-            </cmdargs>
-        </buckminster>
-		<echo message="provision : import projects in workspace" />
-        <buckminster command="import">
-            <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
-            <cmdargs>
-                <arg value="${relengDir}/buckminster_BuildStep_86/build.mspec" />
+                <arg value="${relengDir}/buckminster_BuildStep_85/build.mspec" />
             </cmdargs>
         </buckminster>
 
@@ -1974,7 +1974,7 @@ This file was generated by Eclipse EGF
 			<globargs>
 				<arg value="-Dsite.include.top=true"/>
 				<arg value="-Dsite.signing=false"/>				
-				<arg value="-Dcbi.include.source=false"/>				
+				<arg value="-Dcbi.include.source=true"/>				
 			</globargs>
 			<cmdargs>
 				<arg value="org.polarsys.kitalpha.model.common.ui.menu.feature:eclipse.feature#site.p2" />
@@ -2053,7 +2053,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_61" depends="init,install.buckminster" >
+	<target name="PublishStep_60" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -2082,7 +2082,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_62" depends="init,install.buckminster" >
+	<target name="PublishStep_61" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -2111,7 +2111,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_65" depends="init,install.buckminster" >
+	<target name="PublishStep_64" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -2140,7 +2140,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_68" depends="init,install.buckminster" >
+	<target name="PublishStep_67" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -2169,7 +2169,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_69" depends="init,install.buckminster" >
+	<target name="PublishStep_68" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -2198,7 +2198,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_72" depends="init,install.buckminster" >
+	<target name="PublishStep_71" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -2227,7 +2227,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_73" depends="init,install.buckminster" >
+	<target name="PublishStep_72" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -2256,7 +2256,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_74" depends="init,install.buckminster" >
+	<target name="PublishStep_73" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -2285,7 +2285,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_75" depends="init,install.buckminster" >
+	<target name="PublishStep_74" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -2314,7 +2314,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_78" depends="init,install.buckminster" >
+	<target name="PublishStep_77" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -2343,7 +2343,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_79" depends="init,install.buckminster" >
+	<target name="PublishStep_78" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -2372,7 +2372,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_82" depends="init,install.buckminster" >
+	<target name="PublishStep_81" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -2401,7 +2401,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_85" depends="init,install.buckminster" >
+	<target name="PublishStep_84" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -2430,7 +2430,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_87" depends="init,install.buckminster" >
+	<target name="PublishStep_86" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -2459,7 +2459,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_88" depends="init,install.buckminster" >
+	<target name="PublishStep_87" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -2488,7 +2488,7 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
-	<target name="PublishStep_89" depends="init,install.buckminster" >
+	<target name="PublishStep_88" depends="init,install.buckminster" >
 
 		
 		<echo message="Generate Site"/>
@@ -2530,7 +2530,7 @@ This file was generated by Eclipse EGF
 </target>
 
 
-	<target name="AntStep_90">
+	<target name="AntStep_89">
 		<antcall target="move_egf_to_tools2"/>
 	</target>
 
@@ -2540,7 +2540,7 @@ This file was generated by Eclipse EGF
 </target>
 
 
-	<target name="AntStep_92">
+	<target name="AntStep_91">
 		<antcall target="cleanUp"/>
 	</target>
 
@@ -2586,6 +2586,7 @@ This file was generated by Eclipse EGF
     <delete dir="${publish}/org.polarsys.kitalpha.transposer.componentsample.installer.feature"/>
     <delete dir="${publish}/examples"/>
     <delete dir="${publish}/org.polarsys.kitalpha.model.detachment.contrib.viewpoints.feature"/>
+    <delete dir="${publish}/	org.polarsys.kitalpha.model.common.ui.menu.feature"/>
 </target>
 
 
@@ -2642,6 +2643,7 @@ This file was generated by Eclipse EGF
 				<repository location="file:/${publish}/org.polarsys.kitalpha.model.detachment.contrib.viewpoints.feature/site.p2" />
 				<repository location="file:/${publish}/org.polarsys.kitalpha.resourcereuse.emfscheme.feature/site.p2" />
 				<repository location="file:/${publish}/org.polarsys.kitalpha.resourcereuse.emfscheme.ui.feature/site.p2" />
+				<repository location="file:/${publish}/org.polarsys.kitalpha.model.common.ui.menu.feature/site.p2" />
 			</source>
 		</p2.mirror>
 	</target>
@@ -3481,36 +3483,6 @@ This file was generated by Eclipse EGF
             </args>
         </eclipse.launch>
 	</target>	
-	<target name="detachment_and_attachment_menu_feature" depends="init,install.director" >
-        <eclipse.launch app="director">
-            <args>
-                <jvmarg value="-Declipse.p2.mirrors=false" />
-                    <jvmarg value="-Xmx1024m"/>
-                    <jvmarg value="-XX:MaxPermSize=256m"/>
-
-
-            	<arg value="-roaming" />
-            	<arg value="-profileProperties" />
-                <arg value="org.eclipse.update.install.features=true " />
-
-                <arg value="-d" />
-                <arg value="${publish}/TP_mars" />
-                
-                <arg value="-p" />
-                <arg value="SDKProfile" />
-
-
-                <arg value="-r" />
-                <arg value="file:/${publish}/org.polarsys.kitalpha.model.common.ui.menu.feature/site.p2" />
-                
-
-
-                <arg value="-i" />
-                <arg value="org.polarsys.kitalpha.model.common.ui.menu.feature.feature.group" />
-
-            </args>
-        </eclipse.launch>
-	</target>	
 	<target name="detachment_feature" depends="init,install.director" >
         <eclipse.launch app="director">
             <args>
@@ -3532,6 +3504,8 @@ This file was generated by Eclipse EGF
 
                 <arg value="-r" />
                 <arg value="file:/${publish}/org.polarsys.kitalpha.model.detachment.feature/site.p2" />
+                <arg value="-r" />
+                <arg value="file:/${publish}/org.polarsys.kitalpha.model.common.ui.menu.feature/site.p2" />
                 
 
 
@@ -3539,6 +3513,10 @@ This file was generated by Eclipse EGF
                 <arg value="org.polarsys.kitalpha.model.detachment.feature.feature.group" />
                 <arg value="-i" />
                 <arg value="org.polarsys.kitalpha.model.detachment.source.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.model.common.ui.menu.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.model.common.ui.menu.source.feature.feature.group" />
 
             </args>
         </eclipse.launch>
